--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.container{
+/* .container{
     width: 370px;
     padding-top: 1.5rem;
 }
@@ -24,8 +24,95 @@
     margin: 1.25rem 0rem;
     border: none;
 }
-
+.checkButton{
+    display: block;
+    margin: auto;
+    width: 60%;
+    padding: 0.5rem;
+    text-transform: uppercase;
+} */
 /* mobile view */
 @media only screen and (max-width: 600px) {
     
+}
+#UserInfo{
+    width: max-content;
+    background-color: rgb(216, 216, 216);
+    padding: 0.5rem;
+    border-radius: 10px;
+    display: block;
+    margin: auto;
+    position: absolute;
+    left: 20%;
+    top: 8%;
+}
+.input{
+    margin: 0.5rem 0rem;
+    display: block;
+    height: 25px;
+    width: 200px;
+    padding: 0.5rem;
+    border-radius: 15px;
+}
+
+.AppContainer{
+    background-color: rgba(218, 218, 218, 0.856);
+    max-width: 420px;
+    display: block;
+    margin: auto;
+    padding: 0.25rem 0.75rem;
+    border-radius: 10px;
+}
+.patchSection{
+    background-color: whitesmoke;
+    border-radius: 10px;
+    padding: 10px 20px;
+    box-sizing: border-box;
+}
+.DashboardInfo h1{
+    margin-top: -8px;
+    width: 100%;
+}
+#UserBalance{
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
+    font-size: 32px;
+    width: 120px;
+}
+#Currency{
+    margin-left: 1.25rem;
+}
+.flex{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.flex > div{
+    width: 110px;
+    margin: 0rem 0.75rem;
+}
+#UserIncome,#UserExpenses{
+    background-color: rgba(240, 248, 255, 0);
+    border: none;
+    width: 100px;
+    font-size: x-large;
+}
+#UserIncome{
+    color: green;
+}
+#UserExpenses{
+    color: red;
+}
+.TransactionTitle{
+    margin: 0;
+}
+.transaction-section form input, .transaction-section form select{
+    display: block;
+    padding: 0.5rem;
+    border-radius: 10px;
+    width: 250px;
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
+    margin-left: auto;
+    margin-right: auto;
 }
