--- a/style.css
+++ b/style.css
@@ -40,11 +40,12 @@
     background-color: rgb(216, 216, 216);
     padding: 0.5rem;
     border-radius: 10px;
-    display: block;
+    display: none;
     margin: auto;
     position: absolute;
     left: 20%;
     top: 8%;
+    border: thin black solid;
 }
 .input{
     margin: 0.5rem 0rem;
@@ -103,7 +104,7 @@
 #UserExpenses{
     color: red;
 }
-.TransactionTitle{
+.PatchTitle{
     margin: 0;
 }
 .transaction-section form input, .transaction-section form select{
@@ -115,4 +116,9 @@
     margin-bottom: 0.75rem;
     margin-left: auto;
     margin-right: auto;
+}
+
+.list-container{
+    width: 100%;
+    height: 350px;
 }
