--- a/style.css
+++ b/style.css
@@ -118,7 +118,9 @@
     margin-right: auto;
 }
 
-.list-container{
+#listContainer{
     width: 100%;
-    height: 350px;
+    height: 150px;
+    list-style: none;
+    overflow-y: scroll;
 }
